fix card align

--- a/d3_props/star - ex1/style.css
+++ b/d3_props/star - ex1/style.css
@@ -2,12 +2,6 @@ body {
   background: #8695a8;
 }
 
-.cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-}
-
 .card-item {
   height: 80vh;
   width: 25%;
@@ -22,11 +16,15 @@ body {
   color: dimgray;
 }
 
+.card-content {
+  margin-top: 50%;
+}
+
 .card-item img {
   width: 140px;
   height: 140px;
-  margin-top: 50%;
   border-radius: 500px;
+  margin-bottom: 30px;
 }
 
 .breadCrumb {
@@ -36,6 +34,7 @@ body {
   background-color: gray;
   display: inline-block;
   margin: 2px;
+  bottom: 21px;
 }
 
 .breadCrumb-selected {
